# ORM_Migrations

./: README.md
ORM_Migrations/: alembic.ini  pyproject.toml
ORM_Migrations/alembic/: env.py
ORM_Migrations/alembic/versions/: 4b6ffad7c521_init.py
ORM_Migrations/orm_migrations/: connect_db.py  main.py  models.py  my_select.py  seeds.py
